# GoogleTest

./: .gitignore  CMakeLists.txt  README.md  googletest_test  main.cpp
src/: Checkout.cpp  Checkout.h  DataHolder.h  main.cpp
src/test/: CheckoutTest.cpp  MockTest.cpp
